--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -40,33 +40,22 @@
       </nav> 
     </header>
     <main>
-      <div class="container py-5">
-        <h1>Лента записей</h1>                        
-        <!-- Перебираем в цикле все посты -->
-        {% for post in posts %}
-        <hr>
-        <article>
-          <ul>
-            <li>
-              Место: {{ post.location }}              
-            </li>
-            <li>
-              Дата: {{ post.date }}
-            </li>
-            <li>
-              Категория: <a href="{% url 'blog:category_posts' category_slug=post.category %}">{{ post.category }}</a>
-            </li>
-          </ul>          
-          <!-- Первые 10 слов -->
-          <p>
-            {{ post.text|truncatewords:10 }} ...
-          </p>
-          <a href="{% url 'blog:post_detail' id=post.id %}">Читать полный текст</a>
-        </article>
-        {% endfor %}
-        <hr>
-      </div>
-    </main>
+  <div class="container py-5">
+    <h1>Лента записей</h1>
+    {% for post in post_list %}
+    <article>
+      <ul>
+        <li>Место: {{ post.location }}</li>
+        <li>Дата: {{ post.date }}</li>
+        <li>Категория: <a href="{% url 'blog:category_posts' post.category %}">{{ post.category }}</a></li>
+      </ul>
+      <p>{{ post.text|linebreaksbr }}</p>
+      <a href="{% url 'blog:post_detail' post.id %}">Читать полный текст</a>
+    </article>
+    {% if not forloop.last %}<hr>{% endif %}
+    {% endfor %}
+  </div>
+</main>
     <footer class="border-top text-center py-3">
       <p>© Блогикум</p>    
     </footer>
