--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -5,38 +5,21 @@
 {% block content %}
 <div class="container py-5">
   <h1>Лента записей</h1>
-
-  <article>
-    <ul>
-      <li>Место: Остров отчаянья</li>
-      <li>Дата: 25 октября 1659 года</li>
-      <li>Категория: not-my-day</li>
-    </ul>
-    <p>Всю ночь и весь день шел дождь и дул сильный ...</p>
-    <a href="{% url 'blog:post_detail' 1 %}">Читать полный текст</a>
-  </article>
-  <hr>
-
-  <article>
-    <ul>
-      <li>Место: Остров отчаянья</li>
-      <li>Дата: 1 октября 1659 года</li>
-      <li>Категория: not-my-day</li>
-    </ul>
-    <p>Проснувшись поутру, я увидел, что наш корабль сняло с мели ...</p>
-    <a href="{% url 'blog:post_detail' 2 %}">Читать полный текст</a>
-  </article>
-  <hr>
-
-  <article>
-    <ul>
-      <li>Место: Остров отчаянья</li>
-      <li>Дата: 30 сентября 1659 года</li>
-      <li>Категория: travel</li>
-    </ul>
-    <p>Наш корабль, застигнутый в открытом море страшным штормом, потерпел крушение....</p>
-    <a href="{% url 'blog:post_detail' 3 %}">Читать полный текст</a>
-  </article>
-
+  {% for post in post_list %}
+    <article>
+      <ul>
+        <li>Место: {{ post.location }}</li>
+        <li>Дата: {{ post.date }}</li>
+        <li>Категория: <a href="{% url 'blog:category_posts' post.category %}">{{ post.category }}</a></li>
+      </ul>
+      <p>{{ post.text|truncatewords:15 }}</p> 
+      <a href="{% url 'blog:post_detail' post.id %}">Читать полный текст</a>
+    </article>
+    {% if not forloop.last %}
+      <hr>
+    {% endif %}
+  {% empty %}
+    <p>Записей пока нет.</p>
+  {% endfor %}
 </div>
 {% endblock content %}
