Fix merge conflicts88988897112

--- a/blogicum/templates/base.html
+++ b/blogicum/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="{% static 'img/fav/favicon.ico' %}" type="image">
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/fav/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png' sizes="16x16" href="{% static 'img/fav/favicon-16x16.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/fav/favicon-16x16.png' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <title>{% block title %}Блогикум{% endblock %}</title>
   </head>
@@ -40,12 +40,7 @@
     </header>
     <main>
       <div class="container py-5">
-        {% block content %}
-<<<<<<< HEAD:blogicum/blogicum/templates/base.html
-          {% endblock content %}
-=======
-        {% endblock content %}
->>>>>>> d8102b8c7aedd6b9912812b1fea25d0efed507a4:blogicum/templates/base.html
+        {% block content %}{% endblock %}
       </div>
     </main>
     <footer class="border-top text-center py-3">
